[Neighborhood] Fix text and image alignment for 1920

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -1288,6 +1288,7 @@ body {
                         padding-bottom: $content-padding;
                         .left {
                             overflow: hidden;
+                            flex-basis: 57.11%;
                             > img {
                                 width: 100%;
                                 transition: transform 0.8s linear $midSlidingAnimationDelay;
@@ -1297,8 +1298,8 @@ body {
                             display: flex;
                             flex-direction: column;
                             justify-content: flex-end;
-                            flex-basis: 30%;
-                            padding-left: $content-padding;
+                            flex-basis: 42.88%;
+                            padding-left: 2.944vw;
                         }
                         .button_container {
                             display: flex;
